feat: Made gymName, postal in requestGym required
