# docs/swagger-1.4.json
@@ -1378,7 +1378,9 @@
       "RequestGym": {
         "type": "object",
         "required": [
-          "countryCode"
+          "countryCode",
+          "postal",
+          "gymName"
         ],
         "properties": {
           "countryCode": {
